<resources>
    <string name="app_name">Swoosh</string>
    <string name="welcome_title">GO ALL IN</string>
    <string name="welcome_subtitle">ON GOING ALL OUT</string>
    <string name="welcome_desc">Find a team in your city and dominate the league.</string>
    <string name="welcome_btn_label">GET STARTED</string>
    <string name="league_subtitle">Desired League:</string>
    <string name="btn_mens_label">Mens</string>
    <string name="btn_womens_label">Womens</string>
    <string name="btn_coed_label">Co-ed</string>
    <string name="btn_next_label">NEXT</string>
    <string name="skill_subtitle">I am a:</string>
    <string name="btn_beginner_label">Beginner</string>
    <string name="btn_baller_label">Baller</string>
    <string name="btn_finish_label">FINISH</string>
    <string name="finish_description">Looking for a league near you...</string>

</resources>
